# Analisador-L-xico-Sint-tico

./: AF.py  Analisador.py  Arvore.py  ER.py  TODO.txt  afd1.txt  pyproject.toml
formals/: FA.py  Formals.py  GM.py  Parser.py  RE.py  Scanner.py  Tree.py  __main__.py
src/: AF.py  Analisador.py  ER.py  FA.py  GM.py  RE.py  Scanner.py  Tree.py
tests/: afda.txt  afdb.txt  afdc.txt  er3.txt  gr1.txt  gr4.txt  test_FA.py  test_GM.py  test_Parser.py  test_RE.py  test_Scanner.py  test_scanner.py
tests/gr/: gr2.txt  gr5.txt  gra.txt
